# diffa

./: .gitignore  .tool-versions  NOTICE  README.md  alembic.ini  pyproject.toml
migrations/versions/: 2f7730d11b26_create_diffa_checking_table.py
src/diffa/: cli.py  config.py  services.py  utils.py
src/diffa/core/: services.py
src/diffa/core/db/: config.py  databases.py  models.py
src/diffa/db/: base.py  connect.py  data_models.py  database_handler.py  databases.py  diffa.py  diffa_check.py  diffa_check_run.py  factory.py  models.py  postgresql.py  source_target.py
src/diffa/managers/: check_manager.py  run_manager.py
src/diffa/migrations/: alembic.ini  env.py
src/diffa/migrations/versions/: 1396d5cfd6d4_grant_privileges_to_diffa_tables.py  2f7730d11b26_create_diffa_checking_table.py  9710c39cc078_create_diffa_check_runs_table.py
src/diffa/utils/: logger.py
tests/: common.py  test_databases.py
tests/configs/: test_config.py
tests/managers/: test_check_manager.py  test_run_manager.py
tests/services/: test_services.py
