[tool.poetry]
name = "diffa"
version = "0.1.0"
description = "Checking data different between Data Source and Data Warehouse"
authors = ["Quoc Nguyen <quoc.nguyen@ascenda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.8,<3.13"
click = ">=8.1.8,<9.0"
pydantic = ">=2.10.6,<3.0"
flake8 = ">=7.1.1,<8.0"
dsnparse = ">=0.2.1,<0.3"
psycopg2 = ">=2.9.10,<3.0"
alembic = ">=1.14.1,<2.0"
sqlalchemy = ">=2.0.38,<3.0"
pytest = ">=8.3.4,<9.0"

[tool.poetry.scripts]
diffa = "diffa.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.include]
include = ["migrations/**", "alembic.ini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short" 
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]